# curso_sqlalchemy

./: README.md  pyproject.toml
03_sqla_sync/: create_main.py  insert_main.py
03_sqla_sync/conf/: db_session.py
03_sqla_sync/db/: picoles.sqlite
03_sqla_sync/models/: __all__models.py  __base.py  aditivo_nutritivo.py  conservante.py  ingrediente.py  lote.py  model_base.py  nota_fiscal.py  picole.py  revendedor.py  sabor.py  tipo_embalagem.py  tipo_picole.py
03_sqla_sync/models_old/: __all_models.py  aditivo_nutritivo.py  conservante.py  ingrediente.py  lote.py  model_base.py  nota_fiscal.py  picole.py  revendedor.py  sabor.py  tipo_embalagem.py  tipo_picole.py
